[package]
name = "readmouse"
version = "0.2.1"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/segeljakt/readmouse"
homepage = "https://github.com/segeljakt/readmouse"
description = """
A very small library for reading the mouse location and mouse button presses on macOS.
"""
license = "MIT"
